<?xml version="1.0" encoding="utf-8"?>
<ViewSwitcher xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:theme="@style/AppTheme.NoActionBar"
    android:id="@+id/view_switcher">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:src="@drawable/logo_axelor"
            android:scaleType="fitCenter"
            android:layout_gravity="top"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="330dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:paddingLeft="@dimen/content_space"
            android:paddingRight="@dimen/content_space"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/horizontal_margin_card_view"
                app:cardElevation="@dimen/card_elevation"
                app:cardCornerRadius="@dimen/card_corner_radius"
                android:layout_marginLeft="@dimen/horizontal_margin_card_view">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:layout_gravity="center">
                    <EditText
                        android:id="@+id/username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="36dp"
                        android:layout_marginEnd="24dp"
                        android:layout_marginBottom="15dp"
                        android:hint="@string/prompt_email"
                        android:inputType="textEmailAddress"
                        android:selectAllOnFocus="true"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:autofillHints="" />

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="24dp"

                        android:hint="@string/prompt_password"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:selectAllOnFocus="true"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/username"
                        android:layout_marginBottom="36dp"
                        android:autofillHints="" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_marginTop="60dp"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/layout_margin_bottom_buttons"
                android:layout_gravity="center|bottom">

                <Button
                    android:id="@+id/sign_in"
                    android:text="@string/button_login_title"
                    android:textColor="@color/colorWhite"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/size_buttons"
                    android:layout_margin="@dimen/content_space"
                    android:enabled="false"
                    android:background="@drawable/selected"
                    android:layout_gravity="center"/>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="bottom">
            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#F5F5F5"
                android:layout_marginBottom="5dp"
                android:layout_gravity="bottom"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="bottom|center"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/text_input_space"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:text="@string/edit_text_title_message"/>
            </LinearLayout>
        </LinearLayout>

    </FrameLayout>
</ViewSwitcher>